test/parser/valid/class_structure/class_import.java
import java.io.OutputStream;

protected class A {
  public A() {}
  protected OutputStream c;
}

