test/parser/bad/types/float.java
protected class A {
  protected float x;
}

